# ai-trader

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  HANDOFF.md  PR.md  README.md  fly.toml  main.py  plan.md  project_context.md  pyproject.toml  run_api.py  user_todo.md
analysis/: compare_tf.py  fetch_history.py  results.json  run_backtests.py  select_strategy.py  select_strategy_futures.py  strategy_selection.json  sweep_rsi_macd.py  sweep_tpsl.py  train_from_history.py  validate_params.py
api/: bus.py  main.py
backtest/: reporter.py  runner.py
core/: allocation.py  claude_arbiter.py  config.py  drift_monitor.py  engine.py  live_controller.py  live_outcome_tracker.py  loop_config.py  macro_blackout.py  models.py  order_manager.py  strategy_arbiter.py  strategy_factory.py  strategy_lifecycle.py  strategy_manager.py  strategy_registry.py  strategy_runtime.py  supervisor.py  trading_loop.py
dashboard/: index.html  package-lock.json  package.json  vite.config.ts
data/: fetcher.py
db/: repository.py  schema.py
docs/: api-spec.md  deploy-gcp.md  deploy-oracle.md  mainnet-futures-runbook.md  production-review.md  refactor-migration-guide.md  release-safety-validation-gate.md
events/: __init__.py  bus.py  models.py
exchange/: base.py  binance.py  binance_futures.py  dry_run.py  futures_math.py  paper.py  paper_futures.py
ml/: ab_tester.py  base_model.py  retrainer.py
notifier/: engine_controller.py  logger.py  telegram.py
risk/: manager.py
scheduler/: __init__.py  reports.py
scripts/: backtest_compare.py
(+155 files in other folders)
