[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-trader"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "ccxt>=4.3",
    "python-dotenv>=1.0",
    "pandas>=2.2",
    "pandas-ta>=0.4.71b0",
    "aiosqlite>=0.20",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "python-telegram-bot>=21.0",
    "scipy>=1.11",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.14",
    "httpx>=0.27",
]

[tool.setuptools]
packages = ["core", "exchange", "data", "strategy", "risk", "backtest", "notifier", "api", "db", "ml"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
